# Test_Automation_Platform

./: .gitignore  .replit  README.md  inject_locators.js  main.py  playwright-log.txt  pyproject.toml
app/: __init__.py  analytics.py  auth.py  config.py  conversion.py  emailer.py  execution.py  models.py  playback.py
app/routes/: analytics.py  auth.py  execution.py  integrations.py  main.py  projects.py  recording.py  team.py
app/utils/: environment.py  fs.py  security.py
attached_assets/: Pasted-Build-a-production-ready-open-white-label-Python-Flask-web-application-that-mimics-key-user-facing-1753261610864_1753261610865.txt  Pasted-Using-database-sqlite-home-runner-workspace-instance-app-db-Serving-Flask-app-app-Debug-1754125060086_1754125060087.txt
playwright_scripts/SIT/: Automation_team_demo1.py  Mon1.py  Robot.py  Robot2.py  Test1234.py  Test2.py  V11.py  V12.py  V15.py  Vid1.py  Vid1_v1.py  Vid3.py  Vid4.py  console_log.txt  console_log_locators.json  hide_window.py  vid10.py  vid5.py  vid6.py
playwright_scripts/Test1/: Testing1.py  Vid1.py
robot_scripts/SIT/: Mon1.robot  Robot.robot  (+8 more)
templates/: accept_invitation.html  analytics.html  base.html  carousel_images.py  change_role.html  create_project.html  dashboard.html  edit_project.html  execution_detail.html  execution_results.html  integrations.html  invite.html  login.html  profile.html  project_detail.html  project_members.html  projects.html  record.html  register.html  script_detail.html  script_edit.html  system_info.html  team.html  team_dashboard.html
utils/: playwright_codegen_wrapper.py
(+11 files in other folders)
